--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     },
     "devDependencies": {
         "grunt": "~0.4.2",
-        "grunt-cli": "~0.1.13"
+        "grunt-bumpup": "~0.5.0",
+        "grunt-cli": "~0.1.13",
+        "grunt-contrib-jshint": "~0.8.0"
     }
 }
