--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "grunt-module",
     "version": "0.0.0",
-    "description": "TODO",
+    "description": "A Grunt plugin to release and publish your NPM module.",
     "keywords": [
         "TODO"
     ],
