--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "version": "0.0.0",
     "description": "A Grunt plugin to release and publish your NPM module.",
     "keywords": [
-        "TODO"
+        "copyright",
+        "gruntplugin",
+        "publish",
+        "release"
     ],
     "author": {
         "name": "Clemens Akens",
