--- a/.jshintrc
+++ b/.jshintrc
@@ -5,12 +5,14 @@
     "eqeqeq": true,
     "es3": false,
     "forin": true,
+    "freeze": true,
     "immed": true,
     "indent": 4,
     "latedef": true,
     "newcap": true,
     "noarg": true,
     "noempty": true,
+    "nonbsp": true,
     "nonew": true,
     "plusplus": true,
     "quotmark": true,
@@ -22,7 +24,7 @@
     "maxdepth": false,
     "maxstatements": false,
     "maxcomplexity": false,
-    "maxlen": 80,
+    "maxlen": 160,
 
     "asi": false,
     "boss": false,
@@ -32,20 +34,24 @@
     "evil": false,
     "expr": false,
     "funcscope": false,
+    "gcl": false,
     "globalstrict": false,
     "iterator": false,
     "lastsemic": false,
     "laxbreak": false,
     "laxcomma": false,
     "loopfunc": false,
+    "maxerr": 50,
     "moz": false,
     "multistr": false,
+    "notypeof": false,
     "proto": false,
     "scripturl": false,
     "smarttabs": false,
     "shadow": false,
     "sub": false,
     "supernew": false,
+    "noyield": false,
 
     "browser": false,
     "couch": false,
