--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "grunt": "~0.4.5",
         "grunt-bumpup": "~0.5.2",
         "grunt-cli": "~0.1.13",
-        "grunt-contrib-jshint": "~0.10.0"
+        "grunt-contrib-jshint": "~0.10.0",
+        "grunt-eslint": "~0.6.0"
     }
 }
