--- a/.eslintrc
+++ b/.eslintrc
@@ -41,7 +41,7 @@
         "block-scoped-var":           2, // treat var statements as if they were block scoped
         "complexity":               [ 0, 11 ],
                                          // specify the maximum cyclomatic complexity allowed in a program
-        "consistent-return":          2, // require return statements to either always or never specify values
+        "consistent-return":          0, // require return statements to either always or never specify values
         "curly":                    [ 2, "all" ],
                                          // specify curly brace conventions for all control statements
         "default-case":               2, // require default case in switch statements
@@ -141,9 +141,9 @@
         "no-wrap-func":               2, // disallow wrapping of non-IIFE statements in parens
         "no-mixed-spaces-and-tabs": [ 2, false ],
                                          // disallow mixed spaces and tabs for indentation
-        "quotes":                   [ 2, "double" ],
+        "quotes":                   [ 2, "single" ],
                                          // specify whether double or single quotes should be used
-        "quote-props":                2, // require quotes around object literal property names
+        "quote-props":                0, // require quotes around object literal property names
         "semi":                     [ 2, "always" ],
                                          // require or disallow use of semicolons instead of ASI
         "sort-vars":                  2, // sort variables within the same declaration block
