--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     },
     "devDependencies": {
         "grunt": "~0.4.5",
+        "grunt-contrib-jshint": "~0.10.0",
         "grunt-bumpup": "~0.6.0",
-        "grunt-cli": "~0.1.13",
-        "grunt-eslint": "~0.6.0"
+        "grunt-cli": "~0.1.13"
     }
 }
