--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
         "test": "node_modules/.bin/grunt"
     },
     "dependencies": {
-        "es6-promise": "~1.0.0"
+        "es6-promise": "~2.0.0"
     },
     "devDependencies": {
         "grunt": "~0.4.5",
+        "grunt-bumpup": "~0.6.2",
+        "grunt-cli": "~0.1.13",
         "grunt-contrib-jshint": "~0.10.0",
-        "grunt-bumpup": "~0.6.1",
-        "grunt-cli": "~0.1.13"
+        "grunt-jscs": "~0.8.1",
+        "time-grunt": "~1.0.0"
     }
 }
