--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "grunt-module",
     "version": "1.2.1",
-    "description": "A Grunt plugin to release and publish an npm module.",
+    "description": "A Grunt plugin to easily release and publish your npm module.",
     "keywords": [
         "grunt",
         "plugin",
@@ -34,14 +34,15 @@
         "test": "node_modules/.bin/grunt"
     },
     "dependencies": {
-        "es6-promise": "~2.0.0"
+        "bluebird": "~2.8.2"
     },
     "devDependencies": {
-        "grunt": "~0.4.5",
-        "grunt-bumpup": "~0.6.2",
-        "grunt-cli": "~0.1.13",
-        "grunt-contrib-jshint": "~0.10.0",
-        "grunt-jscs": "~0.8.1",
-        "time-grunt": "~1.0.0"
+        "grunt": "latest",
+        "grunt-bumpup": "latest",
+        "grunt-cli": "latest",
+        "grunt-contrib-jshint": "latest",
+        "grunt-jscs": "latest",
+        "load-grunt-tasks": "latest",
+        "time-grunt": "latest"
     }
 }
